AC_INIT([tm1638], [1.0], [tm1638-lib-2012-08@mjo.tc])

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE()

AC_CHECK_PROGS([DOXYGEN], [doxygen])
if test -z "$DOXYGEN";
   then AC_MSG_WARN([Doxygen not found - continuing without Doxygen support])
fi
AC_PROG_RANLIB
AC_PROG_CC
AC_CONFIG_MACRO_DIR([m4])
AM_CONDITIONAL([HAVE_DOXYGEN], [test -n "$DOXYGEN"])
AM_COND_IF([HAVE_DOXYGEN], [AC_CONFIG_FILES([doc/Doxyfile])])
AC_OUTPUT(Makefile src/Makefile doc/Makefile)
